--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
   <img src="https://i.mij.rip/2025/04/24/21eecf436b6500449d4b0ed201fb0f6d.png" alt="头像" class="avatar">
   <h1>你好，我是 Josiah Chew</h1>
-  <p>欢迎来到我的个人主页！</p>
+  <p>欢迎来到我的个人主页！
+ 
+    还有早安周宇暄😝
+  </p>
 
   <div class="links">
     <a href="mailto:chewcsjie@gmail.com">📧 发送邮件</a>
