--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <div class="links">
     <a href="mailto:chewcsjie@gmail.com">📧 发送邮件</a>
-    <a href="https://github.com/AssamFish" target="_blank">💻 GitHub</a>
+    <a href="https://wa.me/60197633889" target="_blank">📞 WhatsApp</a>
     <a href="https://www.instagram.com/chewjosiah/" target="_blank">🔗 Instagram</a>
   </div>
 
