--- a/mamabirhtday2025/index.html
+++ b/mamabirhtday2025/index.html
@@ -39,7 +39,7 @@
 
     <div class="text-center py-8 px-4 mt-6">
         <h1 class="font-chinese text-3xl sm:text-4xl md:text-5xl font-light text-pink-600 bg-white/60 backdrop-blur-sm p-4 sm:p-6 rounded-xl shadow-lg inline-block">
-            祝妈妈生日快乐
+            妈妈生日快乐🎈
         </h1>
     </div>
 
